Fixed double scrollbar on desktop

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -7,8 +7,12 @@ html, body {
     margin: 0;
     font-size: 100%;
     font-family: "Montserrat";
-    overflow-x: hidden;
     background: black;
+}
+
+body {
+    overflow-x: clip;
+    height: auto;
 }
 
 .my-content {
